Fix bug (overlapping layers issue)
there’s an element overlapping the button, which means clicks aren't reaching the intended Play Trailer Button.

--- a/src/pages/Page1.css
+++ b/src/pages/Page1.css
@@ -163,8 +163,7 @@
   width: 61px;
   height: 63px;
   cursor: pointer;
-  z-index: 4;
-  /* Layer 4: Main core elements */
+  z-index: 5;
 }
 
 /* Layer 5: Social Media and Action Buttons (Aligned with Top Bar) */
